// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar renders correctly for route / 1`] = `
<nav
  aria-label="main navigation"
  className="navbar is-info"
  role="navigation"
>
  <div
    className="navbar-brand"
  >
    <a
      className="navbar-item"
      href="/input-data"
      onClick={[Function]}
    >
      <p
        style={
          Object {
            "fontSize": 26,
            "fontWeight": "bold",
            "width": 112,
          }
        }
      >
        OBIS
      </p>
    </a>
    <a
      className="navbar-burger"
      onClick={[Function]}
      role="button"
    >
      <span
        aria-hidden="true"
      />
      <span
        aria-hidden="true"
      />
      <span
        aria-hidden="true"
      />
    </a>
  </div>
  <div
    className="navbar-menu"
  >
    <div
      className="navbar-start"
    >
      <a
        aria-current={null}
        className="navbar-item"
        href="/input-data"
        onClick={[Function]}
      >
        INPUT DATA
      </a>
      <a
        aria-current={null}
        className="navbar-item"
        href="/help"
        onClick={[Function]}
      >
        HELP
      </a>
    </div>
    <div
      className="navbar-end"
    >
      <a
        className="navbar-item"
        onClick={[Function]}
      >
        <span
          className="icon"
          style={
            Object {
              "marginRight": 6,
            }
          }
        >
          <i
            className="fa"
            icon="user"
          />
        </span>
        logout
      </a>
    </div>
  </div>
</nav>
`;

exports[`Navbar renders correctly for route /help 1`] = `
<nav
  aria-label="main navigation"
  className="navbar is-info"
  role="navigation"
>
  <div
    className="navbar-brand"
  >
    <a
      className="navbar-item"
      href="/input-data"
      onClick={[Function]}
    >
      <p
        style={
          Object {
            "fontSize": 26,
            "fontWeight": "bold",
            "width": 112,
          }
        }
      >
        OBIS
      </p>
    </a>
    <a
      className="navbar-burger"
      onClick={[Function]}
      role="button"
    >
      <span
        aria-hidden="true"
      />
      <span
        aria-hidden="true"
      />
      <span
        aria-hidden="true"
      />
    </a>
  </div>
  <div
    className="navbar-menu"
  >
    <div
      className="navbar-start"
    >
      <a
        aria-current={null}
        className="navbar-item"
        href="/input-data"
        onClick={[Function]}
      >
        INPUT DATA
      </a>
      <a
        aria-current="page"
        className="navbar-item is-active"
        href="/help"
        onClick={[Function]}
        style={Object {}}
      >
        HELP
      </a>
    </div>
    <div
      className="navbar-end"
    >
      <a
        className="navbar-item"
        onClick={[Function]}
      >
        <span
          className="icon"
          style={
            Object {
              "marginRight": 6,
            }
          }
        >
          <i
            className="fa"
            icon="user"
          />
        </span>
        logout
      </a>
    </div>
  </div>
</nav>
`;

exports[`Navbar renders correctly for route /input-data 1`] = `
<nav
  aria-label="main navigation"
  className="navbar is-info"
  role="navigation"
>
  <div
    className="navbar-brand"
  >
    <a
      className="navbar-item"
      href="/input-data"
      onClick={[Function]}
    >
      <p
        style={
          Object {
            "fontSize": 26,
            "fontWeight": "bold",
            "width": 112,
          }
        }
      >
        OBIS
      </p>
    </a>
    <a
      className="navbar-burger"
      onClick={[Function]}
      role="button"
    >
      <span
        aria-hidden="true"
      />
      <span
        aria-hidden="true"
      />
      <span
        aria-hidden="true"
      />
    </a>
  </div>
  <div
    className="navbar-menu"
  >
    <div
      className="navbar-start"
    >
      <a
        aria-current="page"
        className="navbar-item is-active"
        href="/input-data"
        onClick={[Function]}
        style={Object {}}
      >
        INPUT DATA
      </a>
      <a
        aria-current={null}
        className="navbar-item"
        href="/help"
        onClick={[Function]}
      >
        HELP
      </a>
    </div>
    <div
      className="navbar-end"
    >
      <a
        className="navbar-item"
        onClick={[Function]}
      >
        <span
          className="icon"
          style={
            Object {
              "marginRight": 6,
            }
          }
        >
          <i
            className="fa"
            icon="user"
          />
        </span>
        logout
      </a>
    </div>
  </div>
</nav>
`;
